@@ -8,6 +8,7 @@
 - Add placeholder in search form
 - load existing record on render_field when id is present
 - Add helper to override subform label
+- embedded? checks that it is displayed embedded, add loading_embedded? to check first loading of embedded
 
 = 3.3.3
 - Allow to override select options in active_scaffold_search_select
